--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
         <main>
         <h1 class="text-center m-5">Product Shop Using JSON</h1>
-        <div id="container" class="row row-cols-1 row-cols-md-4 g-3">
+        <div id="container" class="row row-cols-1 row-cols-md-4 g-3 mx-auto">
             
         </div>
 
